2012-06-20  Thierry Geraud  <thierry.geraud@lrde.epita.fr>

	New example demonstrating the use of influence zones.

	* apps/morphers/iz.cc: New.
	* apps/morphers/iz_input.pbm: New.

2012-06-21  Roland Levillain  <roland@lrde.epita.fr>

	New ``lazy'' recorder morpher in apps/morpher.

	* apps/morphers/lazy_recorder.hh: New.
	* apps/morphers/lazy_recorder.cc: New test.
	* apps/morphers/Makefile.am (noinst_HEADERS):
	Add lazy_recorder.hh.
	(noinst_PROGRAMS): Add lazy_recorder.
	(lazy_recorder_SOURCES): New.
	(MOSTLYCLEANFILES): Add lena-fill-lazy??????.ppm.

2012-06-21  Roland Levillain  <roland@lrde.epita.fr>

	Render the recorder morpher more generic.

	* apps/morphers/recorder.hh (recorder<I>::sequence): Store a
	sequence of concrete images.
	Add missing inline keywords.
	Improve the documentation.

2011-11-28  Roland Levillain  <roland@lrde.epita.fr>

	New morpher example: recording a breadth-first thinning.

	* apps/morphers/recorder-bft.cc: New.
	* apps/morphers/image2d-skel.hh: New.
	* apps/morphers/Makefile.am (noinst_PROGRAMS): Add recorder-bft.
	(recorder_wst_SOURCES): New.
	(recorder_SOURCES, recorder_wst_SOURCES, mask_recorder_SOURCES):
	Move recorder.hh...
	(noinst_HEADERS): ...here (new variable).
	(MOSTLYCLEANFILES): Add lena-bft??????.pbm.

2011-11-24  Roland Levillain  <roland@lrde.epita.fr>

	New morpher example: recording a watershed transform.

	* apps/morphers/recorder-wst.cc: New.
	* apps/morphers/Makefile.am (noinst_PROGRAMS): Add recorder-wst.
	(recorder_wst_SOURCES): New.
	(MOSTLYCLEANFILES): lena-wst??????.ppm.

2011-11-24  Roland Levillain  <roland@lrde.epita.fr>

	Work around decorated_image's lack of properties, for the recorder.

	* apps/morphers/recorder.hh
	(trait::image_< decorated_image<I,D> >): Replace with..
	(trait::image_< decorated_image<I, recorder<I> > >): ...this.
	Add a value_storage property.
	(ch_value_< decorated_image< image_<I>, data_< recorder<I> > >, V >):